docs-website/versioned_docs/version-2.26/pipeline-components/converters.mdx
---
title: "Converters"
id: converters
slug: "/converters"
description: "Use various Converters to extract data from files in different formats and cast it into the unified document format. There are several converters available for converting PDFs, images, DOCX files, and more."
---

# Converters

Use various Converters to extract data from files in different formats and cast it into the unified document format. There are several converters available for converting PDFs, images, DOCX files, and more.

| Converter                                                    | Description                                                                                                   |
| --- | --- |
| [AzureOCRDocumentConverter](converters/azureocrdocumentconverter.mdx) | Converts PDF (both searchable and image-only), JPEG, PNG, BMP, TIFF, DOCX, XLSX, PPTX, and HTML to documents. |
| [CSVToDocument](converters/csvtodocument.mdx)                           | Converts CSV files to documents.                                                                              |
| [DocumentToImageContent](converters/documenttoimagecontent.mdx)         | Extracts visual data from image or PDF file-based documents and converts them into `ImageContent` objects.    |
| [DOCXToDocument](converters/docxtodocument.mdx)                         | Convert DOCX files to documents.                                                                              |
| [FileToFileContent](converters/filetofilecontent.mdx)                   | Reads files and converts them into `FileContent` objects.                                                   |
| [HTMLToDocument](converters/htmltodocument.mdx)                       | Converts HTML files to documents.                                                                             |
| [ImageFileToDocument](converters/imagefiletodocument.mdx)               | Converts image file references into empty `Document` objects with associated metadata.                        |
| [ImageFileToImageContent](converters/imagefiletoimagecontent.mdx)       | Reads local image files and converts them into `ImageContent` objects.                                        |
| [JSONConverter](converters/jsonconverter.mdx)                           | Converts JSON files to text documents.                                                                        |
| [KreuzbergConverter](converters/kreuzbergconverter.mdx)               | Converts 91+ file formats to documents locally using Kreuzberg's Rust-core engine.                            |
| [MarkdownToDocument](converters/markdowntodocument.mdx)               | Converts markdown files to documents.                                                                         |
| [MistralOCRDocumentConverter](converters/mistralocrdocumentconverter.mdx) | Extracts text from documents using Mistral's OCR API, with optional structured annotations.                   |
| [MSGToDocument](converters/msgtodocument.mdx)                           | Converts Microsoft Outlook .msg files to documents.                                                           |
| [MultiFileConverter](converters/multifileconverter.mdx)                 | Converts CSV, DOCX, HTML, JSON, MD, PPTX, PDF, TXT, and XSLX files to documents.                              |
| [OpenAPIServiceToFunctions](converters/openapiservicetofunctions.mdx) | Transforms OpenAPI service specifications into a format compatible with OpenAI's function calling mechanism.  |
| [OutputAdapter](converters/outputadapter.mdx)                         | Helps the output of one component fit into the input of another.                                              |
| [PaddleOCRVLDocumentConverter](converters/paddleocrvldocumentconverter.mdx) | Extracts text from documents using PaddleOCR's large model document parsing API.                        |
| [PDFMinerToDocument](converters/pdfminertodocument.mdx)               | Converts complex PDF files to documents using pdfminer arguments.                                             |
| [PDFToImageContent](converters/pdftoimagecontent.mdx)                   | Reads local PDF files and converts them into `ImageContent` objects.                                          |
| [PPTXToDocument](converters/pptxtodocument.mdx)                       | Converts PPTX files to documents.                                                                             |
| [PyPDFToDocument](converters/pypdftodocument.mdx)                     | Converts PDF files to documents.                                                                              |
| [TikaDocumentConverter](converters/tikadocumentconverter.mdx)         | Converts various file types to documents using Apache Tika.                                                   |
| [TextFileToDocument](converters/textfiletodocument.mdx)               | Converts text files to documents.                                                                             |
| [UnstructuredFileConverter](converters/unstructuredfileconverter.mdx) | Converts text files and directories to a document.                                                            |
| [XLSXToDocument](converters/xlsxtodocument.mdx)                         | Converts Excel files into documents.                                                                          |
